--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "axios": "^0.18.0",
     "babel-loader": "^8.0.4",
     "babel-plugin-root-import": "^6.1.0",
-    "express": "^4.16.4",
+    "express": "^4.17.1",
+    "multer": "^1.4.1",
     "nodemon": "^1.18.11",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
